--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -8,28 +8,26 @@
     border: 1px solid black
 }
 
-footer {
-    /* position: fixed;
+/* footer {
+    position: fixed;
     bottom: 0;
     left: 0;
     
-    width: 100%; */
-    /* height: 100px; */
-    /* padding: 0 5px; */
+    width: 100%;
+    height: 100px;
+    padding: 0 5px;
+} */
 
-
-}
-
-.cbm-border-top {  
-    /* border-top: 1px solid var(--light-gray) */
-}
+/* .cbm-border-top {  
+    border-top: 1px solid var(--light-gray)
+} */
 .cbm-border-bottom {  
     border-bottom: 1px solid var(--light-gray)
 }
 
-.nav-el {
+/* .nav-el {
     background-color: aqua;
 }
-.nav-el:focus {
+.nav-el:click {
     background-color: gold;
-}
+} */
