--- a/client/src/assets/css/MediaQueries.css
+++ b/client/src/assets/css/MediaQueries.css
@@ -17,20 +17,27 @@
 
 /* Mobile XL */
 @media screen and (min-width: 596px){
-    .COMPONENT__NavElements{
+    .COMPONENT__DesktopNavElements{
         display: flex;
     }
     .HamburgerIcon{
+        /* visibility: hidden; */
         display: none;
     }
     .COMPONENT__HeaderCartIcon_Container{
         display: block;
     }
+    .COMPONENT__MobileNavElements{
+        display: none;
+    }
+    .COMPONENT__HeaderCartIcon_Container{
+        display: flex;
+    }
 }
 
 /* Tablet */
 @media screen and (min-width: 768px){
-    .COMPONENT__NavElements{
+    .COMPONENT__DesktopNavElements{
         font-size: 13px;
     }
 
