--- a/client/src/assets/css/MediaQueries.css
+++ b/client/src/assets/css/MediaQueries.css
@@ -38,7 +38,7 @@
 /* Tablet */
 @media screen and (min-width: 768px){
     .COMPONENT__DesktopNavElements{
-        font-size: 13px;
+        /* font-size: 13px; */
     }
 
 }
