--- a/client/src/assets/css/main/App.scss
+++ b/client/src/assets/css/main/App.scss
@@ -1,4 +1,4 @@
-/* .box{ border: 1px solid black;} */
+// .box{ border: 1px solid black;}
 
 * {
   --light-border: rgb(234, 221, 255);
@@ -299,58 +299,6 @@
     color: #61dafb;
   }
 
-  .productCard{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    background-color: var(--bgColor_ProductCard);
-
-    min-height: 250px;
-    min-width: 250px;
-
-    padding: 10px;
-
-    border-radius: 10px;
-  }
-  .productCard-checkoutBtn, .update-button, .delete-button{
-    
-    color: rgba(255, 255, 255, 0.884);
-
-    padding-top: 2px;
-    padding-bottom: 2px;
-
-    border-radius: 5px;
-  }
-
-  .productCard-checkoutBtn{ background-color: var(--bgColor_indigo); }
-  .productCard-checkoutBtn:hover{ background-color: var(--bgColor_indigo_Hover); }
-
-  .update-button{ background-color: var(--bgColor_btn_update); }
-  .update-button:hover{ background-color: var(--bgColor_btn_update_Hover); }
-
-  .delete-button{ background-color: var(--bgColor_clear); }
-  .delete-button:hover{ background-color: var(--bgColor_clear_Hover); }
-
-  .productCard-image{
-    /* object-position: center; */
-    /* object-fit: cover; */
-
-    overflow-y: hidden;
-    overflow-x: hidden;
-
-    border-radius: 5px;
-
-    width: 100%;
-    height: 100%;
-
-    /* margin: 15px; */
-
-    /* height: 100px; */
-    /* width: 100px; */
-
-  }
   .cbm-border-bottom {  
     border-bottom: 1px solid var(--light-gray)
   }
