--- a/client/src/assets/css/main/App.css
+++ b/client/src/assets/css/main/App.css
@@ -1,3 +1,7 @@
+.box {
+  border: 1px solid black;
+}
+
 * {
   --light-border: rgb(234, 221, 255);
   --gray1: rgb(241, 241, 241);
@@ -18,6 +22,11 @@
   --margin-topBottom: 5px;
   --pixel_Y_1: 5px;
   --marginX-1: 50px;
+  --text-gray-400: #cbd5e0;
+  --text-gray-500: #a0aec0;
+  --text-gray-600: #718096;
+  --text-gray-900: #1a202c;
+  --border-gray-200: #edf2f7;
 }
 
 .App {
